--- a/Final_Tutorial.ipynb
+++ b/Final_Tutorial.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Francis-Jide Adeosun\n",
+    "\n",
+    "Amisha Agrawal\n",
+    "\n",
+    "Jeffrey Zhang"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Introduction: "
    ]
   },
