--- a/Final_Tutorial.ipynb
+++ b/Final_Tutorial.ipynb
@@ -4,17 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Francis-Jide Adeosun\n",
-    "\n",
-    "Amisha Agrawal\n",
-    "\n",
-    "Jeffrey Zhang"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Introduction: "
    ]
   },
@@ -56,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We collected our data from the IMDB dataset. There were many options of different datasets but we decided to go with the \"title.ratings\" and \"title.basics\" datasets because of the average rating and genre columns (respoectfully) present in each set. This enables us to cross examine and check the possible correlation between high rating and particular genres.  "
+    "We collected our data from the IMDB dataset https://datasets.imdbws.com/. The files are too large to post so you can find them at the link.  There were many options of different datasets but we decided to go with the \"title.ratings\" and \"title.basics\" datasets because of the average rating and genre columns (respoectfully) present in each set. This enables us to cross examine and check the possible correlation between high rating and particular genres.  "
    ]
   },
   {
@@ -2700,7 +2689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
