--- a/Final_Tutorial.ipynb
+++ b/Final_Tutorial.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Francis-Jide Adeosun\n",
+    "\n",
+    "Amisha Agrawal\n",
+    "\n",
+    "Jeffrey Zhang"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Introduction: "
    ]
   },
@@ -2689,7 +2700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
